--- a/ui/settings/displaySettings.ui
+++ b/ui/settings/displaySettings.ui
@@ -66,6 +66,30 @@
            <number>50</number>
           </property>
           <item>
+           <widget class="QPushButton" name="settingsBtn">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>35</height>
+             </size>
+            </property>
+            <property name="cursor">
+             <cursorShape>PointingHandCursor</cursorShape>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(0, 0, 0);
+color: rgb(255, 255, 255);
+font-size:17px;
+font-weight:800;
+border: 2px solid grey;
+border-radius: 5px;</string>
+            </property>
+            <property name="text">
+             <string>Settings</string>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QPushButton" name="displayBtn">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -546,6 +570,12 @@ font-weight:600</string>
             </sizepolicy>
            </property>
            <property name="minimumSize">
+            <size>
+             <width>85</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
             <size>
              <width>85</width>
              <height>35</height>
