--- a/ui/runningProcesses.ui
+++ b/ui/runningProcesses.ui
@@ -38,22 +38,6 @@
    <layout class="QGridLayout" name="gridLayout">
     <item row="1" column="2">
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="0" column="0">
-       <spacer name="verticalSpacer_4">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeType">
-         <enum>QSizePolicy::Fixed</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>10</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
       <item row="2" column="0">
        <spacer name="verticalSpacer_5">
         <property name="orientation">
@@ -65,7 +49,7 @@
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
-          <height>5</height>
+          <height>30</height>
          </size>
         </property>
        </spacer>
@@ -93,11 +77,42 @@
            <x>0</x>
            <y>0</y>
            <width>518</width>
-           <height>521</height>
+           <height>456</height>
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout_4"/>
         </widget>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QFrame" name="consoleFrame">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>50</height>
+         </size>
+        </property>
+        <property name="frameShape">
+         <enum>QFrame::StyledPanel</enum>
+        </property>
+        <property name="frameShadow">
+         <enum>QFrame::Raised</enum>
+        </property>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QPlainTextEdit" name="consoleLabel">
+           <property name="cursor" stdset="0">
+            <cursorShape>ForbiddenCursor</cursorShape>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </widget>
       </item>
      </layout>
@@ -310,7 +325,6 @@ border-radius: 5px;</string>
                    </property>
                    <property name="font">
                     <font>
-                     <pointsize>11</pointsize>
                      <weight>99</weight>
                      <bold>true</bold>
                     </font>
@@ -346,7 +360,6 @@ border-radius: 5px;</string>
                    </property>
                    <property name="font">
                     <font>
-                     <pointsize>11</pointsize>
                      <weight>99</weight>
                      <bold>true</bold>
                     </font>
@@ -382,7 +395,6 @@ border-radius: 5px;</string>
                    </property>
                    <property name="font">
                     <font>
-                     <pointsize>10</pointsize>
                      <weight>99</weight>
                      <bold>true</bold>
                     </font>
